# circus

./: .gitignore  .taplo.toml  Cargo.toml  README.md  circus.toml  fc.toml  flake.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: nix.yml  rust.yml  vm-tests.yml
crates/agent/: Cargo.toml
crates/agent/src/: build.rs  config.rs  lib.rs  main.rs  psi.rs  session.rs  tls.rs  upload.rs
crates/common/: Cargo.toml
crates/common/migrations/: 0001_schema.sql  0002_example.sql  0003_builder_cpu_cores.sql  001_initial_schema.sql  002_add_build_system.sql  003_production_features.sql  004_build_outputs_and_deps.sql  005_channels_remote_builders.sql  006_hardening.sql  007_branch_and_scheduling.sql  008_user_management.sql  009_builds_job_name_index.sql  010_pull_request_support.sql  011_jobset_states.sql  012_build_metrics.sql  013_extended_build_status.sql  014_fix_build_stats_completed.sql  015_listen_notify_triggers.sql  016_failed_paths_cache.sql  017_gc_pinning_and_machine_health.sql  README.md
crates/common/src/: alerts.rs  audit.rs  bootstrap.rs  config.rs  database.rs  error.rs  gc_roots.rs  lib.rs  log_storage.rs  migrate.rs  migrate_cli.rs  models.rs  nix_probe.rs  notifications.rs  pg_notify.rs  roles.rs  service_heartbeat.rs  tracing_init.rs  validate.rs  validation.rs
crates/common/src/repo/: api_keys.rs  build_dependencies.rs  build_metrics.rs  build_outputs.rs  build_products.rs  build_steps.rs  builder_sessions.rs  builds.rs  channels.rs  evaluations.rs  failed_paths_cache.rs  jobset_inputs.rs  jobsets.rs  mod.rs  narinfo_cache.rs  news.rs  notification_configs.rs  notification_tasks.rs  project_members.rs  projects.rs  remote_builders.rs  search.rs  starred_jobs.rs  users.rs  webhook_configs.rs
crates/common/tests/: database_tests.rs  mod.rs  notifications_tests.rs  repo_tests.rs  search_tests.rs  user_management_tests.rs
crates/evaluator/: Cargo.toml
crates/evaluator/src/: eval_loop.rs  git.rs  lib.rs  main.rs  nix.rs
crates/evaluator/tests/: eval_tests.rs  git_tests.rs
crates/migrate-cli/: Cargo.toml
crates/migrate-cli/src/: main.rs
crates/migrate-cli/tests/: cli_smoke.rs
crates/migrations/: Cargo.toml
crates/migrations/migrations/: 0001_tables.sql  0002_indexes.sql  0003_triggers.sql  0004_views.sql  0006_active_jobsets_enabled_filter.sql  0007_news_and_fod.sql  0008_service_heartbeats.sql  0009_audit_log.sql  0010_evaluations_notify.sql  0011_build_meta.sql  0012_builder_sessions.sql  0013_build_required_features.sql  0014_narinfo_cache.sql
crates/migrations/src/: lib.rs
crates/migrations/tests/: migrations_test.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/schema/: circus.capnp
crates/proto/src/: lib.rs
crates/queue-runner/: Cargo.toml
crates/queue-runner/src/: builder.rs  lib.rs  main.rs  psi.rs  runner_loop.rs  worker.rs
crates/queue-runner/src/rpc/: log_sink.rs  mod.rs  pool.rs  result_sink.rs  s3.rs  server.rs  session.rs  tls.rs
crates/queue-runner/tests/: runner_tests.rs
crates/server/: Cargo.toml
crates/server/src/: audit.rs  auth_middleware.rs  error.rs  lib.rs  main.rs  state.rs
crates/server/src/routes/: admin.rs  auth.rs  badges.rs  builds.rs  cache.rs  channel_manifests.rs  channels.rs  dashboard.rs  evaluations.rs  health.rs  jobsets.rs  ldap.rs  logs.rs  metrics.rs  mod.rs  news.rs  oauth.rs  openapi.rs  projects.rs  search.rs  users.rs  webhooks.rs
crates/server/src/routes/dashboard/: admin.rs  auth.rs  csrf.rs  mod.rs  pages.rs  shared.rs  templates.rs
crates/server/static/: style.css
crates/server/templates/: admin.html  base.html  build.html  builds.html  channel.html  channels.html  evaluation.html  evaluations.html  home.html  jobset.html  login.html  metrics.html  news.html  notifications.html  project.html  project_setup.html  projects.html  queue.html  starred.html  users.html
crates/server/tests/: api_tests.rs  e2e_test.rs  openapi_drift.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  openapi_check.rs
docs/: COMPARISON.md  DESIGN.md  DISTRIBUTED.md  README.md
nix/: container-common.nix  demo-vm.nix  vm-common.nix  vm-test.nix
nix/modules/: circus-agent.nix  nixos.nix
nix/tests/: api-crud.nix  auth-rbac.nix  basic-api.nix  channel-tarball.nix  common.nix  declarative.nix  distributed.nix  e2e.nix  features.nix  gc-pinning.nix  machine-health.nix  s3-cache.nix  service-startup.nix  startup.nix  webhooks.nix
