[workspace]
members = [
  "crates/server",
  "crates/evaluator",
  "crates/queue-runner",
  "crates/common",
  "crates/migrate-cli",
]
resolver = "3"

[workspace.package]
authors      = [ "NotAShelf <raf@notashelf.dev" ]
edition      = "2024"
license      = "MPL-2.0"
repository   = "https://gitub.com/feel-co/fc"
rust-version = "1.95.0"                           # nightly
version      = "0.2.0-dev"

[workspace.dependencies]
# Components
fc-common       = { path = "./crates/common" }
fc-evaluator    = { path = "./crates/evaluator" }
fc-queue-runner = { path = "./crates/queue-runner" }
fc-server       = { path = "./crates/server" }


anyhow = "1.0.101"
argon2 = "0.5.3"
askama = "0.15.4"
async-stream = "0.3.6"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = [ "typed-header" ] }
chrono = { version = "0.4.42", features = [ "serde" ] }
clap = { version = "4.5.51", features = [ "derive" ] }
config = "0.15.19"
dashmap = "6.1.0"
futures = "0.3.31"
git2 = "0.20.4"
hex = "0.4.3"
hmac = "0.12.1"
lettre = { version = "0.11.19", default-features = false, features = [
  "tokio1-rustls-tls",
  "smtp-transport",
  "builder",
] }
libc = "0.2.180"
nix-nar = "0.3.1"
oauth2 = "5.0.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false, features = [ "json", "rustls" ] }
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate" ] }
subtle = "2.6.1"
tar = "0.4.44"
tempfile = "3.24.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [ "full" ] }
tokio-util = { version = "0.7.18", features = [ "io" ] }
toml = "1.0.2"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = [ "cors", "trace", "limit", "fs", "set-header" ] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [ "env-filter", "json" ] }
urlencoding = "2.1.3"
uuid = { version = "1.18.1", features = [ "v4", "serde" ] }
xz2 = "0.1.7"

[profile.release]
lto       = true
opt-level = "z"
strip     = true
