[package]
name                 = "circus-agent"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "circus-agent"
path = "src/main.rs"

[dependencies]
circus-proto.workspace = true

anyhow.workspace             = true
async-compression.workspace  = true
capnp.workspace              = true
capnp-futures.workspace      = true
capnp-rpc.workspace          = true
clap.workspace               = true
config.workspace             = true
futures.workspace            = true
hex.workspace                = true
parking_lot.workspace        = true
reqwest.workspace            = true
rustls.workspace             = true
rustls-pemfile.workspace     = true
serde.workspace              = true
serde_json.workspace         = true
sha2.workspace               = true
thiserror.workspace          = true
tokio.workspace              = true
tokio-rustls.workspace       = true
tokio-util.workspace         = true
tracing.workspace            = true
tracing-subscriber.workspace = true
uuid.workspace               = true
whoami.workspace             = true

[lints]
workspace = true
