[package]
name                 = "circus-common"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
circus-migrations.workspace  = true
anyhow.workspace             = true
argon2.workspace             = true
chrono.workspace             = true
clap.workspace               = true
config.workspace             = true
git2.workspace               = true
hex.workspace                = true
humantime-serde.workspace    = true
lettre.workspace             = true
libc.workspace               = true
regex.workspace              = true
reqwest.workspace            = true
serde.workspace              = true
serde_json.workspace         = true
sha2.workspace               = true
sqlx.workspace               = true
tempfile.workspace           = true
thiserror.workspace          = true
tokio.workspace              = true
toml.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true
urlencoding.workspace        = true
uuid.workspace               = true
