[package]
name                 = "circus-evaluator"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow.workspace             = true
chrono.workspace             = true
clap.workspace               = true
config.workspace             = true
futures.workspace            = true
git2.workspace               = true
hex.workspace                = true
serde.workspace              = true
serde_json.workspace         = true
sha2.workspace               = true
sqlx.workspace               = true
thiserror.workspace          = true
tokio.workspace              = true
toml.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true
uuid.workspace               = true

# Our crates
circus-common.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
