[package]
name                 = "fc-migrate-cli"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "fc-migrate"
path = "src/main.rs"

[dependencies]
anyhow.workspace             = true
clap.workspace               = true
fc-common                    = { path = "../common" }
tokio.workspace              = true
tracing-subscriber.workspace = true
