[package]
name                 = "fc-migrate-cli"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "fc-migrate"
path = "src/main.rs"

[dependencies]
fc-common.workspace = true

anyhow.workspace             = true
clap.workspace               = true
tokio.workspace              = true
tracing-subscriber.workspace = true
