[package]
name                 = "circus-migrate-cli"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[[bin]]
name = "circus-migrate"
path = "src/main.rs"

[dependencies]
circus-common.workspace = true

anyhow.workspace             = true
clap.workspace               = true
tokio.workspace              = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
