[package]
name                 = "fc-queue-runner"
version.workspace    = true
edition.workspace    = true
authors.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow.workspace             = true
chrono.workspace             = true
clap.workspace               = true
config.workspace             = true
serde.workspace              = true
serde_json.workspace         = true
sqlx.workspace               = true
thiserror.workspace          = true
tokio.workspace              = true
tokio-util.workspace         = true
tracing.workspace            = true
tracing-subscriber.workspace = true
urlencoding.workspace        = true
uuid.workspace               = true

# Our crates
fc-common.workspace = true

[dev-dependencies]
tempfile.workspace = true
