[package]
name                 = "circus-server"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true

[dependencies]
anyhow.workspace             = true
askama.workspace             = true
async-stream.workspace       = true
axum.workspace               = true
axum-extra.workspace         = true
chrono.workspace             = true
clap.workspace               = true
config.workspace             = true
dashmap.workspace            = true
futures.workspace            = true
hex.workspace                = true
hmac.workspace               = true
ldap3.workspace              = true
oauth2.workspace             = true
reqwest.workspace            = true
serde.workspace              = true
serde_json.workspace         = true
sha2.workspace               = true
sqlx.workspace               = true
subtle.workspace             = true
tar.workspace                = true
thiserror.workspace          = true
tokio.workspace              = true
tokio-util.workspace         = true
toml.workspace               = true
tower.workspace              = true
tower-http.workspace         = true
tracing.workspace            = true
tracing-subscriber.workspace = true
uuid.workspace               = true
xz2.workspace                = true

# Our crates
circus-common.workspace = true

regex.workspace = true

[dev-dependencies]
tower.workspace = true
