[package]
name                 = "circus-xtask"
version              = "0.1.0"
edition.workspace    = true
license.workspace    = true
repository.workspace = true
publish              = false

[[bin]]
name = "xtask"
path = "src/main.rs"

# We deliberately do NOT depend on circus-server here. The drift check parses
# route registrations from the source tree so it can run without compiling
# the whole server crate (which pulls in a large dependency closure). When
# we eventually move to generated OpenAPI via derive macros, that constraint
# can be relaxed.
[dependencies]
anyhow.workspace = true
clap.workspace   = true
regex.workspace  = true
